--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(htcnet_redir C)
 
 set(CMAKE_C_STANDARD 11)
 
+set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -rdynamic)
+
 add_executable(htcnet_redir
   main.c
   server.c server.h
